# smart_spread

./: .gitignore  README.md  pyproject.toml  requirements.txt  smart_spread.py  test.py  test_genres.py  test_sanitization.py
smart_spread/: __init__.py  requirements.txt  smart_spread.py  smart_tab.py
smartspread/: smart_tab.py
tests/: test_smart_spread.py
