[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "smartspread"
version = "0.1.0"
description = "A Python library that extends gspread for enhanced spreadsheet manipulation."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "gspread>=5.0.0",
    "pandas>=1.3.0",
    "cacherator>=0.1.0",
    "logorator>=0.1.0"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/smartspread"
"Repository" = "https://github.com/yourusername/smartspread"